# aria-download-manager

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_zh.md
assets/: icon.icns
extension/chrome/: background.js  manifest.json
scripts/: build-tray.sh  build.sh  info.plist  update_submodule.sh
src/: app.rs  aria2c.rs  data.rs  history.rs  main.rs  server.rs  session.rs  settings.rs  widgets.rs
