[package]
name = "aria-download-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
aria2-ws = "0.4.0"
eframe = "0.24.1"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
users = "0.11.0"

[dependencies.uuid]
version = "1.6.1"
features = [
	"v4",
	"fast-rng"
]
